tests/Should_succeed/2_Variables/12_BoolAff.decaf
class Test {
	void main(){
		boolean a;
		a = true;
		WriteBool(a);
		WriteString("=true");
		WriteString("\n");
	}
}