Tests/Should_fail/2_Variables/04_AffVariableGlobaleTypeIncorrecte.decaf
class Test {
	int a;
	void main(){
		a = true;
	}
}